apps/processing/ingest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingest-ui
  namespace: processing
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ingest-ui
      app: ingest-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingest-ui
        app: ingest-ui
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: ingest-ui
          image: ghcr.io/marcin795/processing-ingest:latest
          ports:
            - containerPort: 8000
              name: ingest-ui
          imagePullPolicy: Always
