apps/processing/ingest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingest-service
  namespace: processing
  labels:
    app.kubernetes.io/name: ingest-ui
    app: ingest-ui
spec:
  ports:
    - port: 8000
      targetPort: ingest-ui
      name: ingest-ui
  selector:
    app.kubernetes.io/name: ingest-ui
    app: ingest-ui
